<resources>
    <string name="app_name">PokerManager</string>
    <string name="chips">Chips</string>
    <string name="chips_game">Chips: 0</string>
    <string name="input">Input</string>
    <string name="blind">Blind</string>
    <string name="every">Every?</string>
    <string name="auto_raise">Auto Raise?</string>
    <string name="hands">Hands</string>
    <string name="minutes">Minutes</string>
    <string name="start">Start</string>
    <string name="player_name">Player Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start_game">Start Game</string>
    <string name="app_title">♣ POKER MANAGER ♣</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    <string name="setup">Setup</string>
    <string name="multiplier">%1$d×</string>
    <string name="name">Name</string>
    <string name="game">Game</string>
    <string name="bet_game">Bet: 0</string>
    <string name="role_dealer">Dealer</string>
    <string name="role_big_blind">Big Blind</string>
    <string name="role_small_blind">Small Blind</string>
    <string name="value">Value</string>
    <string name="all_in">All-in</string>
    <string name="raise">Raise</string>
    <string name="call">CALL</string>
    <string name="check">CHECK</string>
    <string name="Raise">RAISE</string>
    <string name="fold">FOLD</string>
    <string name="DealerBB">DE/BB</string>
    <string name="win_message">Parabéns, você venceu! Clique no botão abaixo começar um novo jogo!</string>
    <string name="winner">PlayerName</string>
</resources>