<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_theme"
    android:clickable="false"
    tools:context=".MainActivity">

    <!-- topbar -->

    <!-- topbar-->

    <!--simple text structures-->

    <!--dividers-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#141218"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_game"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeMinTextSize="20sp"
            android:autoSizePresetSizes="30sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/jokeswild"
            android:paddingTop="5dp"
            android:text="@string/setup"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <ImageButton
            android:id="@+id/button"
            style="@style/Buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:src="@drawable/baseline_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_app_bar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_chips"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="33"
            android:hint="@string/chips"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="33"
                android:fontFamily="@font/jokeswild"
                android:text="@string/input"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/switch_dark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@drawable/shape"
            android:checked="true"
            android:color="@color/black"
            android:fontFamily="@font/jokeswild"
            android:padding="8dp"
            android:showText="false"
            android:text="@string/auto_raise"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_bigBlind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="33"
            android:hint="@string/big_blind"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="33"
                android:fontFamily="@font/jokeswild"
                android:text="@string/input"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_every"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/every"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/input"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_multiplier"
            style="@style/Texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:background="@drawable/shape"
            android:padding="5dp"
            android:text="@string/multiplier"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/tgbtn_plus_minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:backgroundTint="#468C8C8C"
                android:text="+"
                android:textColor="@color/white"></Button>

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:backgroundTint="#46000000"
                android:text="-"
                android:textColor="@color/white"></Button>
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>


    <!--dividers-->

    <!--buttons structures (button|button) -->

    <!--buttons structures (button|button) -->

    <!-- Images Used in the program -->


    <View
        android:id="@+id/divider"
        android:layout_width="490dp"
        android:layout_height="3dp"
        android:background="@drawable/divider"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <!--Edit texts structures-->


    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@drawable/divider"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/table_sits" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="68dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="82dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText3"
        app:layout_constraintEnd_toStartOf="@+id/editText3"
        app:layout_constraintStart_toEndOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="82dp"
        android:layout_height="51dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText10"
        app:layout_constraintEnd_toStartOf="@+id/guideline4" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="82dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText9"
        app:layout_constraintEnd_toEndOf="@+id/editText4"
        app:layout_constraintStart_toStartOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="82dp"
        android:layout_height="51dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/editText8"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/editText8"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="82dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText6"
        app:layout_constraintEnd_toStartOf="@+id/editText6"
        app:layout_constraintStart_toEndOf="@+id/editText8" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="82dp"
        android:layout_height="51dp"
        android:layout_marginTop="304dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="@+id/editText1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText1"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="82dp"
        android:layout_height="51dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="@+id/editText10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText10"
        app:layout_constraintTop_toBottomOf="@+id/editText10" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="82dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="380dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="82dp"
        android:layout_height="51dp"
        android:layout_marginStart="80dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <!--Edit texts structures-->


</androidx.constraintlayout.widget.ConstraintLayout>

